--- a/public/views/user-page.html
+++ b/public/views/user-page.html
@@ -3,8 +3,8 @@
         <div class="col sidebar">
             <img src="/images/Etril_Logo_minimal.png" alt="Etril Co" class="logo img-fluid">
             <ul class="list-unstyled">
-                <li>Etril Maps</li>
-                <li>Etril CS</li>
+                <!-- <li>Etril Maps</li>
+                <li>Etril CS</li> -->
                 <li ng-click="logoutUser()">Logout</li>
             </ul>
         </div>
