--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,9 +20,9 @@ body {
 .sidebar img.logo {
     display: flex;
     justify-self: center;
-    max-height: 72px;
+    max-height: 81px;
     margin: 0 auto;
-    padding: .5rem;
+    padding: .75rem
 }
 
 .sidebar ul li{
@@ -38,6 +38,8 @@ body {
     padding:1.5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
 }
 .main-content .page-col.wrapper {
     min-height: calc(100vh - 72px);
