--- a/public/views/components/room-page/gm-room-view.html
+++ b/public/views/components/room-page/gm-room-view.html
@@ -1,5 +1,59 @@
 <div ng-if="view === 'maps'" style="position:relative">
     <!-- <h3 class="text-center">GM</h3> -->
+    <form ng-submit="addMapTooRoom(room)" class="pb-3  mb-3" style="border-bottom:1px solid grey;">
+        <h5 class=" no-gutters" style="    border-bottom: 1px solid grey;
+        padding-bottom: .5rem;
+        margin-bottom: .5rem;">Avaliable
+            maps to players</h5>
+        <div class="row">
+            <div class="col">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.gurenGraslands">
+                    <label class="form-check-label">Guren Graslands</label>
+                </div>
+                <!-- {{userToShow.maps}} -->
+                <!-- value1 = {{userToShow.maps.gurenGraslands}} -->
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.tamir">
+                    <label class="form-check-label">tamir</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.bayar">
+                    <label class="form-check-label">bayar</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.spikeBay">
+                    <label class="form-check-label">spike bay</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.scarletHills">
+                    <label class="form-check-label">scarlet hills</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.erdeneForest">
+                    <label class="form-check-label">erdene forest</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.dalaiVillage">
+                    <label class="form-check-label"> dalai village</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.tsetsegForest">
+                    <label class="form-check-label">tsetseg forest</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.goldenValley">
+                    <label class="form-check-label">golden valley</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" ng-model="room.maps.IkhThorog">
+                    <label class="form-check-label">IkhThorog</label>
+                </div>
+
+            </div>
+        </div>
+        <button class="show-map-btn active mt-2">Save</button>
+    </form>
 
     <div class="row">
         <div class="col" ng-init="map='Guren Graslands'">
@@ -81,8 +135,15 @@
                         </div>
                         <div class="row">
                             <div class="col">Power</div>
+                            <div class="col pr-1">
+                                <div>MS:</div>
+                                <div>SS:</div>
+                                <div>CS:</div>
+                            </div>
                             <div class="col">
                                 <input class="custom-input" type="text" ng-model="userToShow.stats.power" placeholder="Power">
+                                <div>{{userToShow.stats.power /2}}</div>
+                                <div>0</div>
                             </div>
                         </div>
                         <div class="row">
