--- a/public/views/room-page.html
+++ b/public/views/room-page.html
@@ -5,15 +5,19 @@
                 <img src="/images/Etril_Logo_minimal.png" alt="Etril Co" class="logo img-fluid">
             </a>
             <ul class="list-unstyled" ng-init="view='cs'">
-                <li ng-click="view = 'maps'">Etril Maps</li>
-                <li ng-click="view = 'cs'">Etril CS</li>
-                <li ng-click="logoutUser()">Logout</li>
+                <li style="cursor:pointer" ng-click="view = 'maps'">Etril Maps</li>
+                <li style="cursor:pointer" ng-click="view = 'cs'">Etril CS</li>
+                <li style="cursor:pointer" ng-click="logoutUser()">Logout</li>
             </ul>
         </div>
         <div class="col main-content">
             <div class="row">
                 <div class="col top-bar">
                     <div>Welcome back {{username}}</div>
+                    <div>
+                        <img ng-if="view==='cs'" src="/images/Etril_Character_Sheet_Logo.png" alt="" style="max-width:200px;">
+                        <img ng-if="view==='maps'" src="/images/Etril_Maps_Logo.png" alt="" style="max-width:200px;">
+                    </div>
                     <div>Room ID: {{room._id}}</div>
                 </div>
             </div>
