--- a/public/css/alerts.css
+++ b/public/css/alerts.css
@@ -4,6 +4,17 @@
     margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 3px;
+
+  }
+  .room-page .alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    max-width: 600px;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 1.25rem;
   }
   .alert-success {
     background-color: #91cf91;
