--- a/public/css/characterCreation.css
+++ b/public/css/characterCreation.css
@@ -19,7 +19,7 @@
     z-index: 1;
 }
 .choose-class-btn {
-    background: #bb843e;
+    background: #98e7b8;
     color: #42403d;
     border: none;
     border-radius: 4px;
